# micro_bit_serial

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x
src/: main.rs  serial_setup.rs
src/data/: data_1.txt  minicom_output.txt  minicom_output_1.txt  minicom_output_2.txt  minicom_output_3.txt  minicom_output_4.txt  minicom_output_6.txt  minicom_output_may_26_23.txt  sed_testing.txt
src/data/old_data/: data_1.txt
