[package]
name = "micro_bit_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.microbit-v2]
version = "0.13.0"
optional = true

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.4.0" }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
nb = "1.0.0"
heapless = "0.7.10"
embedded-hal = "0.2.6"
defmt-rtt = "0.4"
lsm303agr = "0.2.2"

[features]
v2 = ["microbit-v2"]
